--- a/src/docs/Support.mdx
+++ b/src/docs/Support.mdx
@@ -1,7 +1,7 @@
 import { Meta } from '@storybook/addon-docs';
 import { Markdown } from "@storybook/blocks";
 
-<Meta title="Docs/Support" />
+<Meta title="Support" />
 
 # Support
 
