refactor: rename to evergreen

--- a/src/docs/foundations/Typography.mdx
+++ b/src/docs/foundations/Typography.mdx
@@ -8,29 +8,29 @@ import { Meta, ColorPalette, ColorItem, Typeset } from '@storybook/blocks';
 
 <Typeset
   fontSizes={[
-    'var(--mobius-font-size-h1)',
-    'var(--mobius-font-size-h2)',
-    'var(--mobius-font-size-h3)',
-    'var(--mobius-font-size-h4)',
-    'var(--mobius-font-size-h5)',
-    'var(--mobius-font-size-h6)',
+    'var(--evg-font-size-h1)',
+    'var(--evg-font-size-h2)',
+    'var(--evg-font-size-h3)',
+    'var(--evg-font-size-h4)',
+    'var(--evg-font-size-h5)',
+    'var(--evg-font-size-h6)',
   ]}
-  fontWeight="var(--mobius-font-weight-bold)"
+  fontWeight="var(--evg-font-weight-bold)"
   sampleText="The future is in our hands to shape."
-  fontFamily="var(--mobius-font-family-heading)"
+  fontFamily="var(--evg-font-family-heading)"
 />
 
 # Body
 
 <Typeset
   fontSizes={[
-    'var(--mobius-font-size-xl)',
-    'var(--mobius-font-size-lg)',
-    'var(--mobius-font-size-md)',
-    'var(--mobius-font-size-base)',
-    'var(--mobius-font-size-sm)',
-    'var(--mobius-font-size-xs)',
+    'var(--evg-font-size-xl)',
+    'var(--evg-font-size-lg)',
+    'var(--evg-font-size-md)',
+    'var(--evg-font-size-base)',
+    'var(--evg-font-size-sm)',
+    'var(--evg-font-size-xs)',
   ]}
   sampleText="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-  fontFamily="var(--mobius-font-family)"
+  fontFamily="var(--evg-font-family)"
 />
