feat: install latest tokens and clean up the docs

--- a/src/docs/foundations/tokens/Stream.mdx
+++ b/src/docs/foundations/tokens/Stream.mdx
@@ -1,12 +1,12 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
-import { containerColorGroups } from './lib/colors';
+import { streamColorGroups } from './lib/colors';
 
-<Meta title="Foundations/Tokens/Container Colors" />
+<Meta title="Foundations/Tokens/Stream" />
 
-# Container colors
+# Stream
 
 <ColorPalette>
-  {containerColorGroups.map((group) => (
+  {streamColorGroups.map((group) => (
     <ColorItem
       key={group.name}
       title={group.name}
