refactor: use our tokens table

--- a/src/docs/foundations/tokens/Colors.mdx
+++ b/src/docs/foundations/tokens/Colors.mdx
@@ -1,17 +1,9 @@
-import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
-import { colorGroups } from './lib/colors';
+import { Meta } from '@storybook/blocks';
+import Tokens from './blocks/Tokens/Tokens';
 
 <Meta title="Foundations/Tokens/Colors" />
 
 # Colors
 
-<ColorPalette>
-  {colorGroups.map((group) => (
-    <ColorItem
-      key={group.name}
-      title={group.name}
-      subtitle={group.subtitle}
-      colors={group.colors}
-    />
-  ))}
-</ColorPalette>
+<Tokens collection="color" />
+
