--- a/src/docs/foundations/tokens/Theme.mdx
+++ b/src/docs/foundations/tokens/Theme.mdx
@@ -1,8 +1,8 @@
 import { Meta } from '@storybook/blocks';
 import Tokens from './blocks/Tokens/Tokens';
 
-<Meta title="Foundations/Tokens/Button" />
+<Meta title="Foundations/Tokens/Theme" />
 
-# Button
+# Theme
 
-<Tokens collection="button" />
+<Tokens collection="theme" />
