--- a/src/docs/GettingStarted.mdx
+++ b/src/docs/GettingStarted.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 import { Markdown } from "@storybook/blocks";
-import Readme from '../../README.md';
+import Readme from '../../README.md?raw';
 
 <Meta title="Getting started" />
 
