--- a/src/docs/Migration.mdx
+++ b/src/docs/Migration.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs';
 import { Markdown } from "@storybook/blocks";
-import Readme from '../../Migration.md';
+import Readme from '../../Migration.md?raw';
 
 <Meta title="Migration" />
 
