docs: wrap to wrapper

--- a/src/docs/guides/PageSetup.mdx
+++ b/src/docs/guides/PageSetup.mdx
@@ -80,4 +80,4 @@ context (or even none at all).
 ## Main content 
 
 Once the app wrapper, header, and footer have been put in place, we can move on to the main content
-which begins with [page sections and wraps](?path=/docs/guides-page-sections-and-wrappers--docs).
+which begins with [page sections and wrappers](?path=/docs/guides-page-sections-and-wrappers--docs).
