--- a/src/docs/guides/Theming.mdx
+++ b/src/docs/guides/Theming.mdx
@@ -48,7 +48,8 @@ correctly and we retain [WCAG AA contrast compliance](https://www.w3.org/WAI/WCA
 across a wide range of components.
 
 All components that support theming in Evergreen have a 'theme support' badge at the top of their
-docs page.
+docs page. The most important ones you will likely come across are [page sections](?path=/docs/components-canvas-section--docs),
+[boxes](?path=/docs/components-canvas-box--docs) and [cards](?path=/docs/components-canvas-card--docs).
 
 <evg-badge type="info" class="evg-spacing-bottom-lg">Theme support</evg-badge>
 
