docs: update support page

--- a/src/docs/Support.mdx
+++ b/src/docs/Support.mdx
@@ -5,30 +5,43 @@ import { Markdown } from "@storybook/blocks";
 
 # Support
 
-> Report a problem which relates to this project, and a member of the team will respond as quickly as possible.
->
+> If you encounter issues or have questions, we're here to help.
 
-## Support Hours
+## When to reach out
 
-Support is available inside our standard working hours of 10:00 to 18:00 Monday to Friday.
+Contact support when you:
 
-## Requesting support
+- Encounter bugs or unexpected behaviour
+- Need clarification on implementation guidelines
+- Have accessibility concerns
+- Find inconsistencies in the documentation
+- Need guidance choosing the right component for a specific use case
 
-You can email [support@etch.co](mailto:support@etch.co) and provide as much information about the issue, to ensure we can meet the response times below.
+By reporting issues and suggesting improvements, you help create a more robust design system that better serves the entire WRAP ecosystem.
 
-Alternatively, if you have a code-specific question or problem you can [raise an issue on GitHub](https://github.com/wrap-org/evergreen/issues/new)
+### For designers
 
-## Response times
+If you're using Evergreen's Figma resources and need assistance:
 
-We classify each request as either “Critical” or “Normal” and respond to each type appropriately:
+- **Contact the design team**: Email [evergreen@wrap.ngo](mailto:evergreen@wrap.ngo) with your query
+- **Include details**: Specify which Figma components or templates you're working with and describe the issue clearly
+- **Provide examples**: Screenshots or recordings help us understand your challenge better
 
-1. **Critical** – an issue that prevents normal use of a web application. We aim to respond within one working day.
-2. **Normal** – an issue that inhibits the core user experience but does not result in a direct loss of revenue. We aim to respond within five working days.
+### For developers
 
-## How we’ll respond
+When working with Evergreen components in code:
 
-When we respond to your support request, we will do so with one or more of the following:
+- **Report issues on GitHub**: Raise an issue on our [GitHub repository](https://github.com/wrap-org/evergreen/issues) with detailed reproduction steps
+- **Check previous issues**: Your problem may already have a solution or workaround
+- **Technical queries**: For implementation questions, contact [evergreen@wrap.ngo](mailto:evergreen@wrap.ngo)
 
-- A resolution
-- A potential workaround
-- A request for more information
+### Response times
+
+Our aim is to provide timely support for all Evergreen users:
+
+- **Initial response**: Within 2 working days
+- **Issue triage**: Within 5 working days for bug reports
+- **Resolution timeframes**: Vary depending on complexity:
+    - Critical bugs: 1-3 working days
+    - Standard issues: 5-10 working days
+    - Feature requests: Evaluated during regular planning cycles
