feat!: update state tokens to sentiment

--- a/src/docs/foundations/tokens/Sentiment.mdx
+++ b/src/docs/foundations/tokens/Sentiment.mdx
@@ -1,8 +1,8 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 import Tokens from './blocks/Tokens/Tokens';
 
-<Meta title="Foundations/Tokens/State" />
+<Meta title="Foundations/Tokens/Sentiment" />
 
-# State
+# Sentiment
 
-<Tokens collection="state" />
+<Tokens collection="sentiment" />
