--- a/src/docs/foundations/tokens/Sentiment.mdx
+++ b/src/docs/foundations/tokens/Sentiment.mdx
@@ -12,4 +12,4 @@ These colour tokens are designed with appropriate accessible contrast variations
 backgrounds, and borders. This streamlined approach creates clear visual signalling for
 users across all interface elements.
 
-<Tokens collection="state" />
+<Tokens collection="sentiment" />
