--- a/src/docs/foundations/Breakpoints.mdx
+++ b/src/docs/foundations/Breakpoints.mdx
@@ -5,6 +5,13 @@ import Breakpoints from './tokens/blocks/Breakpoints/Breakpoints';
 
 # Breakpoints
 
-The design system contains several breakpoints exposed as SCSS variables.
+> Defined viewport widths that trigger responsive layout changes.
 
-<Breakpoints />
+Breakpoints establish consistent points at which layouts adapt to different screen sizes.
+The system uses a mobile-first approach with clearly defined widths for small, medium, large,
+and extra-large devices. These breakpoints ensure that interfaces maintain proper spacing,
+readability, and usability across all device types, from smartphones to large desktop displays.
+
+<docs-fullscreen-story>
+  <Breakpoints />
+</docs-fullscreen-story>
