--- a/src/docs/foundations/Typography.mdx
+++ b/src/docs/foundations/Typography.mdx
@@ -4,6 +4,12 @@ import { Meta, ColorPalette, ColorItem, Typeset } from '@storybook/blocks';
 
 # Typography
 
+> A hierarchical system balancing readability and aesthetics.
+
+Hierarchical system of font families, weights, sizes, and line heights balances readability and aesthetics.
+Evergreen's typography foundation establishes a clear hierarchy and provides guidance for headings, body
+text, and specialised text elements.
+
 ## Display
 
 <Typeset
