--- a/src/docs/foundations/tokens/Button.mdx
+++ b/src/docs/foundations/tokens/Button.mdx
@@ -5,4 +5,10 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Button
 
+> Value to control button appearance, including sizes, borders, backgrounds, and states.
+
+Dedicated token collections that standardise button styling across the system. Button tokens
+define values for sizes, background and border colours for different states (default, hover,
+active, disabled) to ensure consistent interactive elements throughout the interface.
+
 <Tokens collection="button" />
