--- a/src/docs/foundations/tokens/Colors.mdx
+++ b/src/docs/foundations/tokens/Colors.mdx
@@ -5,5 +5,13 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Colors
 
+> The color values used throughout the design system.
+>
+
+Foundational colours ensure visual consistency and accessibility throughout the design system.
+We've organised them into primary, secondary, neutral, and semantic palettes with appropriate
+tints and shades. Each colour is defined as a token that can be referenced consistently across
+the entire system.
+
 <Tokens collection="color" />
 
