--- a/src/docs/foundations/tokens/Input.mdx
+++ b/src/docs/foundations/tokens/Input.mdx
@@ -5,4 +5,9 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Input
 
+> Standardised values that define the visual appearance of form elements.
+
+Input tokens define consistent styling for inputs, selects, textareas, and other
+form controls, to ensure that all form interactions are consistent.
+
 <Tokens collection="input" />
