--- a/src/docs/foundations/tokens/Radius.mdx
+++ b/src/docs/foundations/tokens/Radius.mdx
@@ -5,4 +5,11 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Radius
 
+> Border radius values that define the roundness of UI elements.
+
+Border radius values define the roundness of UI elements for a cohesive visual language.
+The radius scale provides consistent corner treatments from sharp (0px) to fully rounded,
+helping to establish the overall aesthetic of the interface and create visual harmony
+between components.
+
 <Tokens collection="radius" />
