--- a/src/docs/foundations/tokens/Spacing.mdx
+++ b/src/docs/foundations/tokens/Spacing.mdx
@@ -5,4 +5,10 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Spacing
 
+> Standardised measurements that maintain consistent distances between elements.
+
+Standardised measurements maintain consistent distances between elements across
+all interfaces. The spacing scale uses consistent increments to maintain proper
+visual rhythm and relationships between components throughout the interface.
+
 <Tokens collection="spacing" />
