--- a/src/docs/foundations/tokens/Theme.mdx
+++ b/src/docs/foundations/tokens/Theme.mdx
@@ -5,4 +5,10 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Theme
 
+> Collections of token values grouped to create consistent visual modes.
+
+Themes are collections of token values grouped to create consistent light, dark,
+or brand-specific visual modes. Themes allow for comprehensive styling changes by
+modifying token values while preserving the same underlying component structure.
+
 <Tokens collection="theme" />
