--- a/src/docs/foundations/tokens/Transition.mdx
+++ b/src/docs/foundations/tokens/Transition.mdx
@@ -5,4 +5,10 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Transition
 
+> Motion variables that ensure smooth and predictable animations.
+
+Motion variables ensure smooth and predictable animations throughout the interface.
+Transition tokens define duration, delay, and easing functions for interactions
+like hover states, expanding/collapsing elements, and page transitions.
+
 <Tokens collection="transition" />
