--- a/src/docs/foundations/tokens/Font.mdx
+++ b/src/docs/foundations/tokens/Font.mdx
@@ -5,6 +5,12 @@ import Tokens from './blocks/Tokens/Tokens';
 
 # Font
 
+> Typography token definitions that establish readable and harmonious text styles.
+
+Typography tokens establish readable and harmonious text styles. They include font families,
+weights, sizes, and line heights — providing the building blocks for creating consistent text
+styles and maintaining typographic rhythm throughout the interface.
+
 # Family
 
 <Tokens collection="font-family" />
