docs: token descriptions

--- a/src/docs/foundations/tokens/Font.mdx
+++ b/src/docs/foundations/tokens/Font.mdx
@@ -11,7 +11,7 @@ Typography tokens establish readable and harmonious text styles. They include fo
 weights, sizes, and line heights — providing the building blocks for creating consistent text
 styles and maintaining typographic rhythm throughout the interface.
 
-# Family
+## Family
 
 <Tokens collection="font-family" />
 
