docs: use etch token tables

--- a/src/docs/foundations/tokens/Button.mdx
+++ b/src/docs/foundations/tokens/Button.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Button" />
 
@@ -11,4 +11,4 @@ Dedicated token collections that standardise button styling across the system. B
 define values for sizes, background and border colours for different states (default, hover,
 active, disabled) to ensure consistent interactive elements throughout the interface.
 
-<Tokens collection="button" />
+<Tokens collection="evg-button" />
