--- a/src/docs/foundations/tokens/Colors.mdx
+++ b/src/docs/foundations/tokens/Colors.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Colors" />
 
@@ -13,5 +13,5 @@ We've organised them into primary, secondary, neutral, and semantic palettes wit
 tints and shades. Each colour is defined as a token that can be referenced consistently across
 the entire system.
 
-<Tokens collection="color" />
+<Tokens collection="evg-color" />
 
