--- a/src/docs/foundations/tokens/Font.mdx
+++ b/src/docs/foundations/tokens/Font.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Font" />
 
@@ -13,12 +13,12 @@ styles and maintaining typographic rhythm throughout the interface.
 
 ## Family
 
-<Tokens collection="font-family" />
+<Tokens collection="evg-font-family" />
 
 ## Size
 
-<Tokens collection="font-size" />
+<Tokens collection="evg-font-size" />
 
 ## Weight
 
-<Tokens collection="font-weight" />
+<Tokens collection="evg-font-weight" />
