--- a/src/docs/foundations/tokens/Input.mdx
+++ b/src/docs/foundations/tokens/Input.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Input" />
 
@@ -10,4 +10,4 @@ import Tokens from './blocks/Tokens/Tokens';
 Input tokens define consistent styling for inputs, selects, textareas, and other
 form controls, to ensure that all form interactions are consistent.
 
-<Tokens collection="input" />
+<Tokens collection="evg-input" />
