--- a/src/docs/foundations/tokens/Radius.mdx
+++ b/src/docs/foundations/tokens/Radius.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Radius" />
 
@@ -12,4 +12,4 @@ The radius scale provides consistent corner treatments from sharp (0px) to fully
 helping to establish the overall aesthetic of the interface and create visual harmony
 between components.
 
-<Tokens collection="radius" />
+<Tokens collection="evg-radius" />
