--- a/src/docs/foundations/tokens/Sentiment.mdx
+++ b/src/docs/foundations/tokens/Sentiment.mdx
@@ -1,5 +1,5 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Sentiment" />
 
@@ -12,4 +12,4 @@ These colour tokens are designed with appropriate accessible contrast variations
 backgrounds, and borders. This streamlined approach creates clear visual signalling for
 users across all interface elements.
 
-<Tokens collection="sentiment" />
+<Tokens collection="evg-sentiment" />
