--- a/src/docs/foundations/tokens/Spacing.mdx
+++ b/src/docs/foundations/tokens/Spacing.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Spacing" />
 
@@ -11,4 +11,4 @@ Standardised measurements maintain consistent distances between elements across
 all interfaces. The spacing scale uses consistent increments to maintain proper
 visual rhythm and relationships between components throughout the interface.
 
-<Tokens collection="spacing" />
+<Tokens collection="evg-spacing" />
