--- a/src/docs/foundations/tokens/Theme.mdx
+++ b/src/docs/foundations/tokens/Theme.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Theme" />
 
@@ -11,4 +11,4 @@ Themes are collections of token values grouped to create consistent light, dark,
 or brand-specific visual modes. Themes allow for comprehensive styling changes by
 modifying token values while preserving the same underlying component structure.
 
-<Tokens collection="theme" />
+<Tokens collection="evg-theme" />
