--- a/src/docs/foundations/tokens/Transition.mdx
+++ b/src/docs/foundations/tokens/Transition.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Transition" />
 
@@ -11,4 +11,4 @@ Motion variables ensure smooth and predictable animations throughout the interfa
 Transition tokens define duration, delay, and easing functions for interactions
 like hover states, expanding/collapsing elements, and page transitions.
 
-<Tokens collection="transition" />
+<Tokens collection="evg-transition" />
