--- a/src/docs/foundations/tokens/Elevation.mdx
+++ b/src/docs/foundations/tokens/Elevation.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/blocks';
-import Tokens from './blocks/Tokens/Tokens';
+import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Elevation" />
 
@@ -11,4 +11,4 @@ Shadow system creates depth and hierarchy through perceived elevation from the s
 These tokens define box-shadow properties with increasing intensity to establish hierarchy
 and focus through perceived distance from the background.
 
-<Tokens collection="shadow" />
+<Tokens collection="evg-shadow" />
