docs: update to storybook 10 and add a11y tests

--- a/src/docs/foundations/BrandedIcons.mdx
+++ b/src/docs/foundations/BrandedIcons.mdx
@@ -1,4 +1,4 @@
-import { Meta, IconGallery, IconItem } from '@storybook/blocks';
+import { Meta, IconGallery, IconItem } from '@storybook/addon-docs/blocks';
 import { iconKeys, distinctiveIconKeys, functionalIconKeys } from '../../components/content/Icon/icons';
 import '../../components/content/Icon/Icon';
 
