--- a/src/docs/foundations/Breakpoints.mdx
+++ b/src/docs/foundations/Breakpoints.mdx
@@ -1,4 +1,4 @@
-import { Meta } from '@storybook/blocks';
+import { Meta } from '@storybook/addon-docs/blocks';
 import Breakpoints from './tokens/blocks/Breakpoints/Breakpoints';
 
 <Meta title="Foundations/Breakpoints" />
