--- a/src/docs/foundations/Typography.mdx
+++ b/src/docs/foundations/Typography.mdx
@@ -1,4 +1,4 @@
-import { Meta, ColorPalette, ColorItem, Typeset } from '@storybook/blocks';
+import { Meta, ColorPalette, ColorItem, Typeset } from '@storybook/addon-docs/blocks';
 
 <Meta title="Foundations/Typography" />
 
