--- a/src/docs/foundations/tokens/Sentiment.mdx
+++ b/src/docs/foundations/tokens/Sentiment.mdx
@@ -1,4 +1,4 @@
-import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
+import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks';
 import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Sentiment" />
