--- a/src/docs/guides/GridsBoxesAndCards.mdx
+++ b/src/docs/guides/GridsBoxesAndCards.mdx
@@ -1,4 +1,4 @@
-import { Meta, Markdown, Canvas } from '@storybook/addon-docs';
+import { Meta, Markdown, Canvas } from '@storybook/addon-docs/blocks';
 import * as GridStories from '../../components/composition/Grid/Grid.stories.tsx';
 import * as BoxStories from '../../components/canvas/Box/Box.stories.tsx';
 import * as CardStories from '../../components/canvas/Card/Card.stories.tsx';
