--- a/src/docs/guides/PageSectionsAndWrappers.mdx
+++ b/src/docs/guides/PageSectionsAndWrappers.mdx
@@ -1,4 +1,4 @@
-import { Meta, Markdown, Canvas } from '@storybook/addon-docs';
+import { Meta, Markdown, Canvas } from '@storybook/addon-docs/blocks';
 import * as SectionStories from '../../components/canvas/Section/Section.stories.tsx';
 import * as SupergraphicStories from '../../components/canvas/Supergraphic/Supergraphic.stories.tsx';
 import * as WrapperStories from '../../components/composition/Wrapper/Wrapper.stories.tsx';
