--- a/src/docs/guides/PageSetup.mdx
+++ b/src/docs/guides/PageSetup.mdx
@@ -1,4 +1,4 @@
-import { Meta, Markdown, Canvas } from '@storybook/addon-docs';
+import { Meta, Markdown, Canvas } from '@storybook/addon-docs/blocks';
 import * as SkipLinkStories from '../../components/control/SkipLink/SkipLink.stories.tsx';
 import * as AppStories from '../../components/composition/App/App.stories.tsx';
 import * as HeaderStories from '../../components/canvas/Header/Header.stories.tsx';
