--- a/src/docs/guides/Theming.mdx
+++ b/src/docs/guides/Theming.mdx
@@ -1,4 +1,4 @@
-import { Meta, Markdown, Canvas, Source } from '@storybook/addon-docs';
+import { Meta, Markdown, Canvas, Source } from '@storybook/addon-docs/blocks';
 import * as FooterRecipes from '../recipes/Footer.stories.tsx';
 import * as HeaderRecipes from '../recipes/Header.stories.tsx';
 
