--- a/src/docs/Changelog.mdx
+++ b/src/docs/Changelog.mdx
@@ -1,5 +1,4 @@
-import { Meta } from '@storybook/addon-docs';
-import { Markdown } from "@storybook/blocks";
+import { Meta, Markdown } from '@storybook/addon-docs/blocks';
 import Changelog from '../../CHANGELOG.md?raw';
 
 <Meta title="Changelog" />
