--- a/src/docs/Contributing.mdx
+++ b/src/docs/Contributing.mdx
@@ -1,5 +1,4 @@
-import { Meta } from '@storybook/addon-docs';
-import { Markdown } from "@storybook/blocks";
+import { Meta, Markdown } from '@storybook/addon-docs/blocks';
 import Contributing from '../../CONTRIBUTING.md?raw';
 
 <Meta title="Contributing" />
