--- a/src/docs/GoodToKnow.mdx
+++ b/src/docs/GoodToKnow.mdx
@@ -1,5 +1,4 @@
-import { Meta } from '@storybook/addon-docs';
-import { Markdown } from "@storybook/blocks";
+import { Meta, Markdown } from '@storybook/addon-docs/blocks';
 
 <Meta title="Good to know" />
 
