--- a/src/docs/foundations/Icons.mdx
+++ b/src/docs/foundations/Icons.mdx
@@ -1,4 +1,4 @@
-import { Meta, IconGallery, IconItem } from '@storybook/blocks';
+import { Meta, IconGallery, IconItem } from '@storybook/addon-docs/blocks';
 import { iconKeys, distinctiveIconKeys, functionalIconKeys } from '../../components/content/Icon/icons';
 import '../../components/content/Icon/Icon';
 
