--- a/src/docs/foundations/tokens/Spacing.mdx
+++ b/src/docs/foundations/tokens/Spacing.mdx
@@ -1,4 +1,4 @@
-import { Meta } from '@storybook/blocks';
+import { Meta } from '@storybook/addon-docs/blocks';
 import { Tokens } from '@etchteam/storybook-addon-design-token-tables';
 
 <Meta title="Foundations/Tokens/Spacing" />
